--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					</a>
 					</li>
 					<li>
-						<a href="http://www.instagram.com/the_real_daquan" target="_blank">
+						<a href="http://www.instagram.com/the_real_ewwdavid" target="_blank">
 						<i class="fab fa-instagram-square" aria-hidden="true"></i>
 					</a>
 					</li>
