--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 			<div class="card-white">
 				<h2>Music </h2>
 				<p>
-					Spent 10 years playing in a band. I've been luckily enough to open for amazing artists such as: Jason Derulo, We The Kings,
-					Plain White Ts, Andy Grammer, Bubba Sparxxx, Krayzie Bone, The Audition, and many others
+					Spent 10 years playing in a band. I've been luckily enough to open for amazing artists such as:
+					Jason Derulo, We The Kings, Plain White Ts, Andy Grammer, Bubba Sparxxx, Krayzie Bone, The Audition, and many others
 				</p>
 			</div>
 
