--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div class="card-white">
 				<h2>Education </h2>
 				<p>
-					Clemson MBA, IESEG MIB, Le Wagon Coding, Edinboro BS Marketing
+					Clemson MBA, IESEG MSc International Business, Le Wagon Coding, Edinboro BS Marketing
 				</p>
 			</div>
 
